# rules_qemu

./: .bazelrc  .dockerignore  .gitattributes  .pre-commit-config.yaml  .typos.toml  BUILD.bazel  Dockerfile  MODULE.bazel  README.md  REPO.bazel  build_docker.sh  defs.bzl
.bcr/: metadata.template.json
.github/workflows/: buildifier.yaml  ci.bazelrc  ci.yaml  publish.yaml  release.yaml  release_prep.sh  tag.yaml
e2e/smoke/: BUILD.bazel  MODULE.bazel  README.md  qemu_system_smoke_test.bzl  system_qmp_smoke.py  system_x86_boot_smoke.py
qemu/: BUILD.bazel  declare_toolchains.bzl  qemu_binary.bzl  qemu_system_toolchain.bzl  qemu_toolchain.bzl
qemu/extension/: BUILD.bazel  qemu.bzl
qemu/private/: BUILD.bazel  qemu_toolchains_repository.bzl
tests/: BUILD.bazel  hello.c  test_hello_qemu.sh
