load("@bazel_lib//:bzl_library.bzl", "bzl_library")

bzl_library(
    name = "qemu_binary",
    srcs = ["qemu/qemu_binary.bzl"],
    visibility = ["//visibility:public"],
    deps = [
        "@bazel_lib//lib:transitions",
        "@hermetic_launcher//launcher:lib_bzl",
    ],
)

bzl_library(
    name = "defs",
    srcs = ["defs.bzl"],
    visibility = ["//visibility:public"],
)
