module(
    name = "rules_qemu",
    version = "0.0.0",
    bazel_compatibility = [">=7.7.0"],
)

bazel_dep(name = "bazel_features", version = "1.43.0")
bazel_dep(name = "bazel_lib", version = "3.2.2")
bazel_dep(name = "hermetic_launcher", version = "0.0.5")
bazel_dep(name = "platforms", version = "1.0.0")

bazel_dep(name = "llvm", version = "", dev_dependency = True)
bazel_dep(name = "rules_cc", version = "0.2.18", dev_dependency = True)
bazel_dep(name = "rules_shell", version = "0.6.1", dev_dependency = True)

local_path_override(
    module_name = "llvm",
    path = "../llvm",
)

qemu = use_extension("//qemu/extension:qemu.bzl", "qemu")
use_repo(
    qemu,
    "qemu_user_toolchains",
)

register_toolchains(
    "@qemu_user_toolchains//:all",
    dev_dependency = True,
)

register_toolchains(
    "@llvm//toolchain:all",
    dev_dependency = True,
)
