load("@bazel_lib//:bzl_library.bzl", "bzl_library")
load(
    "//qemu:qemu_system_toolchain.bzl",
    "declare_qemu_system_guest_platforms",
)

SYSTEM_GUEST_PLATFORMS = [
    ("linux", "aarch64"),
    ("linux", "arm"),
    ("linux", "armv7"),
    ("linux", "i386"),
    ("linux", "mips64"),
    ("linux", "ppc"),
    ("linux", "ppc32"),
    ("linux", "ppc64le"),
    ("linux", "riscv32"),
    ("linux", "riscv64"),
    ("linux", "s390x"),
    ("linux", "x86_32"),
    ("linux", "x86_64"),
]

declare_qemu_system_guest_platforms(
    target_platforms = SYSTEM_GUEST_PLATFORMS,
)

toolchain_type(
    name = "toolchain_type",
    visibility = ["//visibility:public"],
)

toolchain_type(
    name = "system_toolchain_type",
    visibility = ["//visibility:public"],
)

bzl_library(
    name = "qemu_binary",
    srcs = ["qemu_binary.bzl"],
    visibility = ["//visibility:public"],
    deps = [
        "@bazel_lib//lib:transitions",
        "@hermetic_launcher//launcher:lib_bzl",
    ],
)

bzl_library(
    name = "qemu_toolchain",
    srcs = ["qemu_toolchain.bzl"],
    visibility = ["//visibility:public"],
)

bzl_library(
    name = "qemu_system_toolchain",
    srcs = ["qemu_system_toolchain.bzl"],
    visibility = ["//visibility:public"],
)

bzl_library(
    name = "declare_toolchains",
    srcs = ["declare_toolchains.bzl"],
    visibility = ["//visibility:public"],
    deps = [
        ":qemu_system_toolchain",
        ":qemu_toolchain",
    ],
)
