load("@rules_cc//cc:cc_binary.bzl", "cc_binary")
load("@rules_qemu//qemu:qemu_binary.bzl", "qemu_binary")
load("@rules_shell//shell:sh_test.bzl", "sh_test")
load(
    ":qemu_system_smoke_test.bzl",
    "qemu_system_api_probe",
    "qemu_system_qmp_smoke_test",
    "qemu_system_x86_boot_smoke_test",
)

cc_binary(
    name = "hello",
    srcs = ["hello.c"],
)

SMOKE_PLATFORMS = {
    "amd64": "@llvm//platforms:linux_x86_64_musl",
    "arm64": "@llvm//platforms:linux_aarch64_musl",
    "riscv64": "@llvm//platforms:linux_riscv64_musl",
}

platform(
    name = "qemu_guest_linux_riscv64",
    constraint_values = [
        "@platforms//os:linux",
        "@platforms//cpu:riscv64",
    ],
    visibility = ["//visibility:public"],
)

platform(
    name = "qemu_guest_linux_x86_64",
    constraint_values = [
        "@platforms//os:linux",
        "@platforms//cpu:x86_64",
    ],
    visibility = ["//visibility:public"],
)

[
    qemu_binary(
        name = "hello_{}".format(name),
        testonly = True,
        binary = ":hello",
        target_platform = platform,
    )
    for name, platform in SMOKE_PLATFORMS.items()
]

[
    sh_test(
        name = "hello_{}_qemu_test".format(name),
        srcs = ["test_hello_qemu.sh"],
        data = [":hello_{}".format(name)],
        env = {
            "BINARY": "$(rootpath :hello_{})".format(name),
            "EXPECTED_OUTPUT": "Hello, QEMU!",
        },
        tags = ["no-remote"],
    )
    for name in SMOKE_PLATFORMS
]

qemu_binary(
    name = "hello_x86_64",
    testonly = True,
    binary = ":hello",
    target_platform = "@llvm//platforms:linux_x86_64",
)

sh_test(
    name = "hello_x86_64_qemu_test",
    srcs = ["test_hello_qemu.sh"],
    data = [":hello_x86_64"],
    env = {
        "BINARY": "$(rootpath :hello_x86_64)",
        "EXPECTED_OUTPUT": "Hello, QEMU!",
    },
    tags = [
        "manual",
        "no-remote",
    ],
)

qemu_binary(
    name = "hello_aarch64",
    testonly = True,
    binary = ":hello",
    target_platform = "@llvm//platforms:linux_aarch64",
)

sh_test(
    name = "hello_aarch64_qemu_test",
    srcs = ["test_hello_qemu.sh"],
    data = [":hello_aarch64"],
    env = {
        "BINARY": "$(rootpath :hello_aarch64)",
        "EXPECTED_OUTPUT": "Hello, QEMU!",
    },
    tags = [
        "manual",
        "no-remote",
    ],
)

test_suite(
    name = "smoke",
    tests = [
        ":hello_{}_qemu_test".format(name)
        for name in SMOKE_PLATFORMS
    ] + [
        ":qemu_system_qmp_smoke_test",
        ":qemu_system_riscv64_qmp_smoke_test",
        ":qemu_system_x86_boot_smoke_test",
    ],
)

qemu_system_api_probe(
    name = "qemu_system_api_probe",
)

qemu_system_qmp_smoke_test(
    name = "qemu_system_qmp_smoke_test",
)

qemu_system_qmp_smoke_test(
    name = "qemu_system_riscv64_qmp_smoke_test",
    guest_platform = "//:qemu_guest_linux_riscv64",
)

qemu_system_x86_boot_smoke_test(
    name = "qemu_system_x86_boot_smoke_test",
)
