module(
    name = "rules_qemu_smoke",
    bazel_compatibility = [">=7.7.0"],
)

bazel_dep(name = "llvm", version = "0.7.6", dev_dependency = True)
bazel_dep(name = "rules_cc", version = "0.2.18", dev_dependency = True)
bazel_dep(name = "rules_qemu", version = "0.0.0", dev_dependency = True)
bazel_dep(name = "rules_shell", version = "0.6.1", dev_dependency = True)

local_path_override(
    module_name = "rules_qemu",
    path = "../..",
)

qemu = use_extension("@rules_qemu//qemu/extension:qemu.bzl", "qemu")
use_repo(
    qemu,
    "qemu_user_toolchains",
)

register_toolchains(
    "@qemu_user_toolchains//:all",
    dev_dependency = True,
)

register_toolchains(
    "@llvm//toolchain:all",
    dev_dependency = True,
)
