module(
    name = "rules_qemu_smoke",
    bazel_compatibility = [">=7.7.0"],
)

bazel_dep(name = "llvm", version = "0.7.6", dev_dependency = True)
bazel_dep(name = "platforms", version = "1.0.0", dev_dependency = True)
bazel_dep(name = "rules_cc", version = "0.2.18", dev_dependency = True)
bazel_dep(name = "rules_python", version = "1.7.0", dev_dependency = True)
bazel_dep(name = "rules_qemu", version = "0.0.0", dev_dependency = True)
bazel_dep(name = "rules_shell", version = "0.6.1", dev_dependency = True)

python = use_extension("@rules_python//python/extensions:python.bzl", "python", dev_dependency = True)
python.toolchain(
    python_version = "3.12",
)

local_path_override(
    module_name = "rules_qemu",
    path = "../..",
)

qemu = use_extension("@rules_qemu//qemu/extension:qemu.bzl", "qemu")
qemu.system_toolchain(
    system_target = "riscv64-softmmu",
    target_settings = ["//:qemu_guest_is_linux_riscv64"],
)
qemu.system_toolchain(
    system_target = "x86_64-softmmu",
    target_settings = ["//:qemu_guest_is_linux_x86_64"],
)
use_repo(
    qemu,
    "qemu_system_toolchains",
    "qemu_user_toolchains",
)

register_toolchains(
    "@qemu_system_toolchains//:all",
    "@qemu_user_toolchains//:all",
    dev_dependency = True,
)

register_toolchains(
    "@llvm//toolchain:all",
    dev_dependency = True,
)
